add horizontal scroll

--- a/src/App.less
+++ b/src/App.less
@@ -21,8 +21,14 @@ body {
   .horizontal-scroll {
     width: 100vw;
     overflow-x: hidden;
+    img {
+      height: 50vh;
+    }
   }
   .vertical-scroll {
     width: 100vw;
+    img {
+      height: 50vh;
+    }
   }
 }
