add vertical scroll

--- a/src/App.less
+++ b/src/App.less
@@ -27,8 +27,10 @@ body {
   }
   .vertical-scroll {
     width: 100vw;
+    height: 60vh;
+    overflow-y: hidden;
     img {
-      height: 50vh;
+      width: 100vw;
     }
   }
 }
